<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F6F2F2">

    <RelativeLayout
        android:id="@+id/cardView_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="80dp"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/main_card"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="40dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardMaxElevation="10dp">

            <RelativeLayout
                android:id="@+id/middle_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/seccondery_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/inner_background"
                    app:cardCornerRadius="20dp"
                    app:cardMaxElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingVertical="10dp">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_alignParentEnd="true"
                            android:background="@android:color/transparent"
                            android:src="@drawable/add_icon"
                            android:text="@string/edit"
                            android:textColor="@color/ash"
                            tools:ignore="RelativeOverlap" />

                        <ImageButton
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/dashboard_icon" />

                        <TextView
                            android:id="@+id/name_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/name1"
                            android:textColor="@color/black"
                            android:textSize="24sp"

                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/school_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/name_text"
                            android:padding="5dp"
                            android:text="@string/school"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="normal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/border"
                            android:padding="10dp"
                            android:text="@string/dat_of_birth"
                            android:textAlignment="center"
                            android:textColor="@color/light_ash"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/border"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@+id/school_name"
                            android:layout_marginTop="4dp"
                            android:background="#B6B2B2" />


                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="20dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingHorizontal="10dp"
                            android:text="@string/_10"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:drawableLeftCompat="@drawable/trophy_icon" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="14dp"
                            android:text="@string/distintion"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingHorizontal="10dp"
                            android:text="@string/_10"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:drawableLeftCompat="@drawable/trophy_icon" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="14dp"
                            android:text="@string/passed"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingHorizontal="10dp"
                            android:text="@string/_8"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:drawableRightCompat="@drawable/dot_circle" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="16dp"
                            android:text="@string/nat_attented"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="14sp" />


                    </LinearLayout>

                </LinearLayout>


                <!--                    />-->


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:padding="15dp"
            app:cardCornerRadius="40dp">

            <ImageView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                android:src="@drawable/image_person" />
        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</RelativeLayout>